toxxi/tests/snapshots/widgets_file_transfer_test__file_transfer_card.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/file_transfer_test.rs
expression: rendered
---
────────────────────────────────────────
╭─ 📥 document.pdf [5.0 MB]────────────╮
│ ████░░░░░░░░░░  30% (500 KB/s)       │
╰──────────────────────────────────────╯
                                        
                                        
────────────────────────────────────────
