toxxi/tests/snapshots/widgets_file_transfer_test__file_transfer_card_outgoing.snap
---
source: rs-toxcore-c/toxxi/tests/widgets/file_transfer_test.rs
expression: rendered
---
────────────────────────────────────────
╭─ 📤 image.png [2.0 MB]───────────────╮
│ ███████░░░░░░░  50% (1 MB/s)         │
╰──────────────────────────────────────╯
                                        
                                        
────────────────────────────────────────
